Support for different Verilog simulators - Currently implemented: -- Icarus Verilog simulator (free/open source) -- Verilator (free/open source) -- Mentor Graphics Modelsim and Questasim (commercial) -- Synopsys VCS (commercial) [as existed in Chisel:master]
- pushed input/output stream operations to sim_api
- sim_signal class defines the generic interface for simulation signal implementations
- added "--verilogSim" switch to choose simulator

- Experimenting with Twirl for cpp/verilog code generation from templates

Support for verilog co-simulation with Verilog simulators in v backend
- use "--verilogExtraSource <verilog-source.v>" multiple times to add multiple verilog sources to Verilog simulation.
- could be used to test/co-simulate BlackBox modules implemented in Verilog

Tester: Emit Chisel "printf" and "assert" messages, as well as other messages sent by the test target to stdout
Small coding style fixes and improvements in complience with Scala coding guidelines
Bug fix (...)

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -17,7 +17,7 @@ WWW_PAGES := index.html documentation.html download.html faq.html releases.html
 WWW_EXTRA := manual.html getting-started.html parameters.html
 
 # The following subdirectories build documentation correctly.
-PDF_DIRS	:= installation manual tutorial getting-started talks/dac12 parameters cheatsheet
+PDF_DIRS	:= bootcamp installation manual tutorial getting-started talks/dac12 parameters cheatsheet
 # Define a function to map PDF_DIRS to a PDF base name.
 # Basically, every directory is the base name of the pdf except for dac12-talk.
 pdf_base_name_from_dir = $(subst talks/dac12,dac12-talk,$(1))
@@ -40,7 +40,7 @@ installTop:= ../www
 # Set the current release info
 # RELEASE_TAGTEXT is something like: v2.2.18 125 g3501d7f
 #  i.e., the output of git describe with dashes replaced by spaces
-RELEASE_TAGTEXT=$(subst -, ,$(shell git describe --tags release || git describe))
+RELEASE_TAGTEXT=$(subst -, ,$(shell git describe --tags release --always))
 RELEASE_TAG=$(firstword $(RELEASE_TAGTEXT))
 RELEASE_DATETEXT=$(shell git log -1 --format="%ai" $(RELEASE_TAG))
 RELEASE_DATE=$(firstword $(RELEASE_DATETEXT))
